Fixed fade animation and overlapping

--- a/Final (Weeks 9-12)/css/stylesheet.css
+++ b/Final (Weeks 9-12)/css/stylesheet.css
@@ -44,21 +44,55 @@ button
 		width: 100%;
 		height: 100%;		
 	}
-#Background
+#BackgroundColor
 	{
 		width: 1920px;
 		height: 1080px;
 	}
+#BackgroundImage
+	{
+		position:absolute;
+    	bottom: 0px;
+		width: 100%;
+		height: 100%;
+	}
+
 #Overlay
 	{
-		width: 1920px;
-		height: 1080px;
+		z-index: 90;
+		position:absolute;
+    	bottom: 0px;
+		width: 100%;
+		height: 100%;
+	}
+
+#Menu 
+	{
+		z-index: 100;
+		position: absolute;
+    	bottom:800px;
+    	left: 280px;
 	}
 
 #Skyline
 	{
+		background: url("../images/skyline.png");
+		background-repeat: no-repeat;
+		z-index: 25;
+		position:absolute;
+    	bottom: 0px;
 		width: 100%;
 		height: 100%;
+	}
+#Silhouette
+	{
+		position:absolute;
+    	bottom: 0px;
+		width: 100%;
+		height: 100%;
+		background: url("../images/skyline-silhouette.png");
+		background-repeat: no-repeat;
+		z-index: 50;
 	}
 
 .underline 
@@ -70,23 +104,18 @@ button
 	{
 		background-color: #ecec00;
 	}
+.blueBackground
+	{
+		background-color: blue;
+	}
 
 .silhouette 
 	{
-		height: auto;
-		width: auto;
-		background: url("../images/skyline-silhouette.png");
-		background-repeat: no-repeat;
-		z-index: 10;
-	}
 
+	}
 .skyline 
 	{
-		height: 100%;
-		width: auto;
-		background: url("../images/skyline.png");
-		background-repeat: no-repeat;
-		z-index: 10;
+		
 	}
 
 .sunny 
